# gemma-genie

./: .gitignore  CHANGELOG.md  CLAUDE.md  FAQ.md  QUICKSTART.md  README.md  VERSIONS.md  gemma  gemma_rag.py  genie  install.sh
docs/: FAQ.md  QUICKSTART.md
python/: genie  install.sh
rust/: Cargo.toml  README.md
rust/crates/genie/: Cargo.toml
rust/crates/genie-bootstrap/src/: main.rs
rust/crates/genie/src/: backend.rs  cli.rs  config.rs  doctor.rs  ffi.rs  graph.rs  lib.rs  llm.rs  main.rs  models.rs  parse.rs  rag.rs
rust/crates/genie/tests/: integration.rs
