[package]
name = "genie"
version = "0.2.4"
edition = "2021"
description = "Private, offline AI assistant CLI (Rust rewrite) — Gemma 4 + local RAG + correlation graph"
license = "Apache-2.0"
repository = "https://github.com/sbmandava/gemma-genie"

[[bin]]
name = "genie"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# ---------------------------------------------------------------------------
# Added per milestone. Use the LOCAL research/ sources (see ../../CLAUDE.md);
# do not switch to crates.io without checking the local repo first.
#
# M2/M3 — RAG (embeddings + vector store):
#   model2vec-rs = { path = "/opt/projects/unovie/research/model2vec-rs" }
#   lancedb      = { path = "/opt/projects/unovie/research/lancedb/rust/lancedb" }
#       (also enable the [patch] for lance* in ../../rust/Cargo.toml)
#
# M2 — document parsing (needs PDFium; Tesseract for OCR, default feature):
#   liteparse    = { path = "/opt/projects/unovie/research/liteparse/crates/liteparse" }
#
# M4 — correlation graph (needs CMake + C++ to build the ladybug engine):
#   lbug         = { path = "/opt/projects/unovie/research/ladybug-rust" }
#
# M1/M6 — litert-lm: v1 subprocesses the prebuilt binary (no crate). FFI later.
